--- a/source/002/Section_002_Fall_2025.tex
+++ b/source/002/Section_002_Fall_2025.tex
@@ -188,7 +188,7 @@ Face coverings are not mandatory, all students and instructional staff are welco
 \vskip.25in
 \noindent\textbf{Emergency Exit Procedures}: Should we experience an emergency event that requires us to vacate the building, students should exit the room and move toward the nearest exit. When exiting the building during an emergency, one should never take an elevator but should use the stairwells. Faculty members and instructional staff will assist students in selecting the safest route for evacuation and will make arrangements to assist individuals with disabilities.
 
-%\includegraphics[scale=.4]{source/002/evacuation.png} 
+\includegraphics[scale=.4]{source/002/evacuation.png} 
 
 \vskip.25in
 \noindent\textbf{Emergency Phone Numbers}:  In case of an on-campus emergency, call the UT Arlington Police Department at 817-272-3003 (non-campus phone), 2-3003 (campus phone). You may also dial 911. Non-emergency number 817-272-3381
@@ -261,6 +261,6 @@ Other & Mon 12/01 & Interviews &  \\
 
 Final Exam & Wed 12/03 & Student Study Day — No Class &  \\
 Final Exam & Thu 12/04 & Final Exam Review & Program 4 Due \\
-Final Exam & Mon 12/08 & Final Exam — Section 002, 8:15PM–10:45PM &  \\
+Final Exam & Mon 12/08 & Final Exam — Section 001, 8:15PM–10:45PM &  \\
 \end{longtable}
 \end{document}
